--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="top">
         <div class="header">
             <h1>Resolute Lion: COVID-19 Case Tracker</h1>
+            <h2>JS Not loaded!</h2>
         </div>
         <div class="input__container">
             <input type="text" class="add__name" placeholder="Name">
